--- a/manager/src/main/res/layout/adb_dialog.xml
+++ b/manager/src/main/res/layout/adb_dialog.xml
@@ -18,22 +18,12 @@
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/port"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/dialog_adb_port">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:maxLength="5"
-                android:maxLines="1"
-                tools:text="12345" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_weight="1"
+            android:text="@string/dialog_adb_discovery_message" />
 
     </LinearLayout>
 
