--- a/manager/src/main/res/layout/adb_dialog.xml
+++ b/manager/src/main/res/layout/adb_dialog.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:lineSpacingExtra="2sp"
             android:text="@string/dialog_adb_discovery_message" />
 
     </LinearLayout>
