--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -49,6 +49,17 @@
             android:textAllCaps="false"
             android:textColor="?android:colorAccent" />
 
+        <Button
+            android:id="@+id/button4"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="getSystemProperties"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
+
         <TextView
             android:id="@android:id/text1"
             android:layout_width="wrap_content"
