--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -67,7 +67,40 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="-12dp"
             android:layout_marginTop="4dp"
-            android:text="requestUserService"
+            android:text="addUserService (main process)"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
+
+        <Button
+            android:id="@+id/button6"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="removeUserService (main process)"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
+
+        <Button
+            android:id="@+id/button7"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="addUserService (standalone process)"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
+
+        <Button
+            android:id="@+id/button8"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="removeUserService (standalone process)"
             android:textAllCaps="false"
             android:textColor="?android:colorAccent" />
 
