--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -60,7 +60,7 @@
             android:textAllCaps="false"
             android:textColor="?android:colorAccent" />
 
-        <Button
+        <!--<Button
             android:id="@+id/button5"
             style="?android:borderlessButtonStyle"
             android:layout_width="wrap_content"
@@ -80,7 +80,7 @@
             android:layout_marginTop="4dp"
             android:text="removeUserService (main process)"
             android:textAllCaps="false"
-            android:textColor="?android:colorAccent" />
+            android:textColor="?android:colorAccent" />-->
 
         <Button
             android:id="@+id/button7"
