--- a/manager/src/main/res/values-tr/translation.xml
+++ b/manager/src/main/res/values-tr/translation.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="translation_percentage">95</integer>
+    <integer name="translation_percentage">100</integer>
+    <bool name="translation_show_percentage_override">true</bool>
 </resources>
