--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -20,6 +20,7 @@
         <item>es-CL</item>
         <item>en</item>
         <!--<item>ja</item>-->
+        <item>ko</item>
         <item>pl</item>
         <item>pt-BR</item>
         <item>ru</item>
@@ -36,6 +37,7 @@
         <item>es-CL</item>
         <item>en-US</item>
         <!--<item>ja</item>-->
+        <item>ko</item>
         <item>pl</item>
         <item>pt-BR</item>
         <item>ru-RU</item>
