--- a/manager/src/main/res/values/styles.xml
+++ b/manager/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
 
     <style name="MaterialCircleIconViewLight">
