--- a/manager/src/main/res/layout/home_activity.xml
+++ b/manager/src/main/res/layout/home_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rikka.material.widget.BorderRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<rikka.widget.borderview.BorderRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@android:id/list"
     android:layout_width="match_parent"
@@ -12,9 +12,9 @@
     android:paddingEnd="@dimen/home_padding"
     android:scrollbarStyle="outsideOverlay"
     android:scrollbars="vertical"
-    app:borderBottomStyle="never"
+    app:borderBottomVisibility="never"
     app:borderTopDrawable="@null"
-    app:borderTopStyle="whenTop"
+    app:borderTopVisibility="whenTop"
     app:fitSystemWindowsInsets="bottom|top"
     app:layoutManager="@string/main_layout_manager"
     app:spanCount="2" />
