--- a/manager/src/main/res/layout/preference_recyclerview.xml
+++ b/manager/src/main/res/layout/preference_recyclerview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rikka.material.widget.BorderRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<rikka.widget.borderview.BorderRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/list"
@@ -10,9 +10,9 @@
     android:paddingTop="?actionBarSize"
     android:scrollbarStyle="outsideOverlay"
     android:scrollbars="vertical"
-    app:borderBottomStyle="never"
+    app:borderBottomVisibility="never"
     app:borderTopDrawable="@null"
-    app:borderTopStyle="whenTop"
+    app:borderTopVisibility="whenTop"
     app:fitSystemWindowsInsets="bottom|top"
     tools:ignore="UnusedResources"
     tools:viewBindingIgnore="true" />
