--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>es-419</item>
         <item>en</item>
         <item>eo</item>
+        <item>hu</item>
         <item>hy</item>
         <item>ja</item>
         <item>ko</item>
@@ -43,6 +44,7 @@
         <item>es-419</item>
         <item>en-US</item>
         <item>eo</item>
+        <item>hu</item>
         <item>hy</item>
         <item>ja</item>
         <item>ko</item>
