Package new languages

--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -22,8 +22,10 @@
         <item>es-419</item>
         <item>en</item>
         <item>eo</item>
+        <item>he</item>
         <item>hu</item>
         <item>hy</item>
+        <item>id</item>
         <item>ja</item>
         <item>ko</item>
         <item>pl</item>
@@ -44,8 +46,10 @@
         <item>es-419</item>
         <item>en-US</item>
         <item>eo</item>
+        <item>he</item>
         <item>hu</item>
         <item>hy</item>
+        <item>id</item>
         <item>ja</item>
         <item>ko</item>
         <item>pl</item>
