Add vi language

--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -33,6 +33,7 @@
         <item>ru</item>
         <item>tr</item>
         <item>uk</item>
+        <item>vi</item>
         <item>zh-Hans</item>
         <item>zh-Hant</item>
     </string-array>
@@ -57,6 +58,7 @@
         <item>ru-RU</item>
         <item>tr</item>
         <item>uk</item>
+        <item>vi</item>
         <item>zh-CN</item>
         <item>zh-TW</item>
     </string-array>
