--- a/manager/src/main/res/layout/adb_pair_tutorial_dialog.xml
+++ b/manager/src/main/res/layout/adb_pair_tutorial_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="48dp"
@@ -35,6 +36,19 @@
                 android:layout_marginTop="8sp"
                 android:lineSpacingExtra="2sp"
                 android:text="@string/adb_pairing_tutorial_content_input_pairing_code" />
+
+            <TextView
+                android:id="@+id/miui"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8sp"
+                android:lineSpacingExtra="2sp"
+                android:text="@string/adb_pairing_tutorial_content_miui"
+                android:textColor="?colorWarning"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:layout_width="wrap_content"
