Include fr language

--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>es-419</item>
         <item>en</item>
         <item>eo</item>
+        <item>fr</item>
         <item>he</item>
         <item>hu</item>
         <item>hy</item>
@@ -47,6 +48,7 @@
         <item>es-419</item>
         <item>en-US</item>
         <item>eo</item>
+        <item>fr</item>
         <item>he</item>
         <item>hu</item>
         <item>hy</item>
